--- a/app/src/main/res/layout/fragment_dev_info.xml
+++ b/app/src/main/res/layout/fragment_dev_info.xml
@@ -1,12 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="xyz.liut.devtools.fragment.DevInfoFragment">
+    android:orientation="vertical">
+
+    <include layout="@layout/layout_app_bar" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+</LinearLayout>
