--- a/app/src/main/res/layout/fragment_app_info.xml
+++ b/app/src/main/res/layout/fragment_app_info.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/layout_app_bar" />
+    <!--<include layout="@layout/layout_app_bar" />-->
 
     <TextView
         android:layout_width="wrap_content"
