--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="side_bar_text_size">25sp</dimen>
+    <dimen name="item_rv_lr">6dp</dimen>
+    <dimen name="item_rv_top">3dp</dimen>
 </resources>
