--- a/app/src/main/res/layout/floating_top_activity.xml
+++ b/app/src/main/res/layout/floating_top_activity.xml
@@ -2,15 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/floating_bg"
+    android:padding="5dp"
     android:orientation="vertical">
 
     <TextView
+        android:text="@string/asnull"
         android:id="@+id/tv_pkg_name"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
+        android:text="@string/asnull"
         android:id="@+id/tv_cls_name"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
