--- a/app/src/main/res/layout/fragment_little_tools.xml
+++ b/app/src/main/res/layout/fragment_little_tools.xml
@@ -37,6 +37,7 @@
         android:background="#22000000" />
 
     <LinearLayout
+        android:id="@+id/ll_top_activity"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="8dp"
