--- a/app/src/main/res/layout/fragment_little_tools.xml
+++ b/app/src/main/res/layout/fragment_little_tools.xml
@@ -6,26 +6,26 @@
 
     <include layout="@layout/layout_app_bar" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#22000000" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
         android:padding="8dp">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1.0"
             android:gravity="center_vertical"
-            android:text="调试模式" />
+            android:text="@string/debug_mode"
+            android:textColor="@color/tv_main"
+            android:textSize="14sp" />
 
-        <CheckBox
+        <android.support.v7.widget.SwitchCompat
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -37,21 +37,57 @@
         android:background="#22000000" />
 
     <LinearLayout
-        android:id="@+id/ll_top_activity"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
         android:padding="8dp">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:text="@string/wifi_debug_mode"
+            android:textColor="@color/tv_main"
             android:layout_height="match_parent"
             android:layout_weight="1.0"
             android:gravity="center_vertical"
-            android:text="当前界面" />
+            android:textSize="14sp" />
 
-        <CheckBox
+        <android.support.v7.widget.SwitchCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#22000000" />
+
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:id="@+id/ll_top_activity"
+        android:layout_width="match_parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
+        android:padding="8dp">
+
+        <TextView
+            android:layout_width="0dp"
+            android:text="@string/get_top_activity"
+            android:textColor="@color/tv_main"
+            android:layout_height="match_parent"
+            android:layout_weight="1.0"
+            android:gravity="center_vertical"
+            android:textSize="14sp" />
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/sw_top_act"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
