--- a/app/src/main/res/layout/activity_bottom_nav.xml
+++ b/app/src/main/res/layout/activity_bottom_nav.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
@@ -8,13 +8,16 @@
     android:orientation="vertical"
     tools:context=".activity.BottomNavActivity">
 
+    <!--<include layout="@layout/layout_app_bar" />-->
+
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1" />
 
     <android.support.design.widget.BottomNavigationView
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,4 +25,4 @@
         android:background="?android:attr/windowBackground"
         app:menu="@menu/navigation" />
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
