--- a/app/src/main/res/layout/item_rv_main.xml
+++ b/app/src/main/res/layout/item_rv_main.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -37,6 +38,12 @@
 
 
     </LinearLayout>
+
+    <TextView
+        android:layout_margin="6dp"
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
 </android.support.v7.widget.CardView>
