--- a/app/src/main/res/layout/item_rv_main.xml
+++ b/app/src/main/res/layout/item_rv_main.xml
@@ -9,15 +9,19 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:visibility="gone"
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher_round" />
+            android:id="@+id/img_icon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="6dp"
+            android:contentDescription="@string/app_icon"
+            android:src="@mipmap/ic_launcher_round"
+            android:layout_marginRight="6dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,14 +29,29 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv_app_title"
+                android:textColor="@color/tv_main"
+                android:textSize="@dimen/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="title" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="sub Title" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/version_string" />
+
+                <TextView
+                    android:id="@+id/tv_version"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Test(1123)" />
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -40,6 +59,7 @@
     </LinearLayout>
 
     <TextView
+        android:visibility="gone"
         android:layout_margin="6dp"
         android:id="@+id/text"
         android:layout_width="match_parent"
