--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="side_bar_text_size">25sp</dimen>
     <dimen name="item_rv_lr">10dp</dimen>
     <dimen name="item_rv_top">6dp</dimen>
+    <dimen name="title">14sp</dimen>
 </resources>
